fix: devcontainer fixes

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,8 @@
         },
         "vscode": {
             "extensions": [
-                "bradlc.vscode-tailwindcss"
+                "bradlc.vscode-tailwindcss",
+                "dbaeumer.vscode-eslint"
             ]
         }
     },
