--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,12 +5,15 @@
     },
     "customizations": {
         "settings": {
-            "terminal.integrated.defaultProfile.linux": "bash"
+            "terminal.integrated.defaultProfile.linux": "bash",
+            "editor.defaultFormatter": "esbenp.prettier-vscode",
+            "editor.formatOnSave": true
         },
         "vscode": {
             "extensions": [
                 "bradlc.vscode-tailwindcss",
-                "dbaeumer.vscode-eslint"
+                "dbaeumer.vscode-eslint",
+                "esbenp.prettier-vscode"
             ]
         }
     },
